# sonipredict-app

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  build_docker.sh  logging.ini  pyproject.toml  requirements.txt  run_docker.sh
sonipredict/: 20210501_ensemble_wo_type_w_coating_w_pp.joblib  __init__.py  app.py  core.py  data_for_app  isomap  isomap_reducer.joblib  model  pca  pca_reducer.joblib  preprocess_data_merged  preprocessed_data_w_projected
