[tool.poetry]
name = "sonipredict"
version = "0.1.0"
description = ""
authors = ["Kevin M. Jablonka <kevin.jablonka@epfl.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.20.0"
gunicorn = "^20.1.0"
scikit-learn = "0.24.2"
plotly = "^5.8.0"
dash-bootstrap-components = "^0.12.0"
pandas = "^1.2.4"
xgboost = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
